--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -15,8 +15,10 @@
     cursor : pointer;
     border: 2px solid transparent;
     border-radius: 1ex;
-    width: 98%;
+    width: 99%;
     margin-top: 3px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .highlight-tag {
@@ -119,6 +121,10 @@
 
 .salvus-task-header-current {
     font-weight: bold;
+}
+
+.salvus-tasks-search {
+    margin-bottom: 4px;
 }
 
 .salvus-tasks-list {
@@ -260,10 +266,22 @@
     opacity:1;
 }
 
+.salvus-task-sort {
+    padding-left: 0;
+}
+
 .salvus-tasks-loading {
     font-size: 16pt;
 }
 
 .salvus-tasks-list-none {
     margin-left:3em;
+}
+
+.salvus-task-search-deleted-icon {
+    margin-bottom: 4px;
+}
+
+.bootstrap-datetimepicker-widget > ul {
+    padding: 0;
 }
