--- a/salvus/page/project.css
+++ b/salvus/page/project.css
@@ -20,6 +20,7 @@
 
 .project-activity-log {
     overflow-y: auto;
+    word-wrap: break-word;
 }
 
 .project-activity-entry {
@@ -65,10 +66,6 @@
     line-height: 2.2em;
     max-height: 13em;
     overflow-y: auto;
-    border: 1px solid grey;
-    border-radius: 4px;
-    margin-left: 2em;
-    margin-top: 1em;
     background-color: #eee;
 }
 
@@ -108,7 +105,7 @@
     }
 
     .project-pages > li {
-        width: 19.3%;
+        width: 20%;
         text-align: center;
     }
 
@@ -335,7 +332,6 @@
 
 .project-id {
     color:#666;
-    margin-right:2ex;
     font-size:10pt;
     font-family:monospace;
 }
@@ -445,11 +441,10 @@
 }
 
 .project-connection {
-    margin-right: 1em;
     border-radius: 6px;
     background-color: #08c;
     padding: 6px;
-    margin: 1ex;
+    margin-bottom: 1ex;
     color: #fff;
 }
 
