--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -3,36 +3,25 @@
 }
 
 .close-button-x {
-    font-size: 18px;
     position: relative;
 }
 
 .close-button-x:hover {
     color: #fff;
-    font-size: 18px;
 }
 
 .navbar-big {
     font-size:18px;
 }
 
-.nav.buttons {
-    margin: 0;
-}
-
 .nav-projects-placeholder {
-    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+    /* No more box shadow */
 }
 
 .nav.projects li.ui-sortable-helper {
     color: #555555;
     text-decoration: none;
     background-color: #ffffff;
-    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 }
 
 .nav.pull-right {
@@ -85,7 +74,6 @@
     color: #222;
 }
 
-
 .salvus-fullscreen-deactivate {
     position:fixed;
     z-index:100000;
@@ -109,7 +97,6 @@
     top: 2px;
     position: relative;
 }
-
 
 .salvus-connection-status-connecting {
     background-color: red;
@@ -137,17 +124,11 @@
         float: none !important;
         font-weight: bold;
         margin: 0;
-        padding-left: 5px;
-        padding-right: 5px;
     }
 
     .navbar-nav li > a {
         font-weight: bold;
         border-radius: 3px;
-    }
-
-    .navbar .nav > .active > a {
-        box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
     }
 
     .salvus-top_navbar {
