--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -47,14 +47,14 @@
 .salvus-course-field {
     color:#555;
     overflow-y: auto;
-    padding-top: 1ex;
     padding-bottom: 1ex;
 }
 
-.salvus-course-field:hover {
-    background : #efe;
+.salvus-course-student-first_name {
+}
+.salvus-course-student-last_name {
 }
 
-.salvus-course-student-email {
+.salvus-course-student-email_address {
     font-family: monospace;
 }
