course: more work in progress

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -50,6 +50,11 @@
     padding-bottom: 1ex;
 }
 
+.salvus-course-student-deleted {
+    text-decoration: line-through;
+    color:#888;
+}
+
 .salvus-course-student-first_name {
 }
 .salvus-course-student-last_name {
