course: implement finding students (left search box) -- pretty easy.

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -63,3 +63,11 @@
 .salvus-course-student-email_address {
     font-family: monospace;
 }
+
+
+.salvus-course-search-describe {
+    margin-top: 4px;
+    font-size: 11pt;
+    padding-bottom: 4px;
+}
+
