course: working on sharing of files

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -64,6 +64,10 @@
     font-family: monospace;
 }
 
+.salvus-course-share-path {
+    font-family: monospace;
+    cursor: pointer;
+}
 
 .salvus-course-search-describe {
     margin-top: 4px;
