possibly clever UI idea: make the top navbar slightly transparent, so user knows to scroll to get back the project tools.

--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -57,6 +57,7 @@
     font-size: 14px;
     margin-bottom: 0;
     min-height: 0;
+    opacity: .9;   /* avoid confusion when project scrolls up and is covered by top bar */
 }
 
 .salvus-fullscreen-activate {
