project find -- some basic cleanup, making things more precise and correct (regarding hidden files, etc.)

--- a/salvus/page/project.css
+++ b/salvus/page/project.css
@@ -202,7 +202,6 @@
     background-color: white;
     font-family: monospace;
     /* overflow-y: auto; */
-    height: 100%;
 }
 
 .project-search-output-command {
@@ -421,6 +420,7 @@
 
 .project-search-output-further-results {
     font-weight: bold;
+    background: white;
 }
 
 .project-search-result {
