--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -483,3 +483,10 @@ code {
 .nav-pills>li+li {
     margin-left: 0 !important;
 }
+
+.btn-group .btn + .btn,
+.btn-group .btn + .btn-group,
+.btn-group .btn-group + .btn,
+.btn-group .btn-group + .btn-group {
+    margin-left: 0 !important;
+}
