make background of output of %latex (and any images) white, in case transparent; also make background of typeset math white.

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -353,11 +353,12 @@ Editor for files in a project
 }
 
 .sagews-output-tex {
-
+    background: white;  /* so that tex is visible */
 }
 
 .sagews-output-image {
     cursor:pointer;
+    background: white;  /* so that, e.g., latex with transparent background is visible */tex is visible 
 }
 
 
