--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -358,7 +358,7 @@ Editor for files in a project
 
 .sagews-output-image {
     cursor:pointer;
-    background: white;  /* so that, e.g., latex with transparent background is visible */tex is visible 
+    background: white;  /* so that, e.g., latex with transparent background is visible */tex is visible
 }
 
 
@@ -490,4 +490,12 @@ code {
 .btn-group .btn-group + .btn,
 .btn-group .btn-group + .btn-group {
     margin-left: 0 !important;
+}
+
+
+.salvus-editor-codemirror-not-synced {
+    background: red;
+    color: white;
+    padding: 5px;
+    border-radius: 3px;
 }
