--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -6,7 +6,6 @@ Editor for files in a project
 
 .salvus-editor-content {
     position: absolute;
-    top: 78px;
     left: 0;
     margin: 0;
     width: 100%;
@@ -64,6 +63,7 @@ Editor for files in a project
 
 .salvus-editor-codemirror-button-row {
     margin-top: 1px;
+    background: #efefef;
 }
 
 .salvus-editor-codemirror-filename {
@@ -210,6 +210,10 @@ Editor for files in a project
     margin-right: 1em;
     right: 0;
     font-size: 11pt;
+}
+
+.salvus-editor-pdf-preview-embed {
+    position: fixed;
 }
 
 
@@ -395,6 +399,10 @@ Editor for files in a project
     font-size: 10pt;
     font-weight: bold;
     color:#555;
+}
+
+.salvus-ipython-notebook {
+    background: white;
 }
 
 .salvus-ipython-notebook-buttons {
