3d: fix some additional issues/bugs before doing first release.

--- a/salvus/page/3d.css
+++ b/salvus/page/3d.css
@@ -3,7 +3,7 @@
     width: 60%;
     border-radius: 4px;
     margin-left: 3em;
-    background: #fcfcfc;
+    background: #f8f8f8;
     box-shadow: 3px 3px 2px #888;
     padding: 1em;
 }
