--- a/salvus/page/3d.css
+++ b/salvus/page/3d.css
@@ -1,15 +1,15 @@
 .salvus-3d-container {
-    border        : 1px solid grey;
-    width         : 60%;
-    border-radius : 4px;
-    margin-left   : 3em;
-    background    : #f8f8f8;
-    box-shadow    : 2px 1px 1px #888;
-    padding       : 1em;
-    cursor        : pointer;
+    margin-left : 3em;
+    cursor      : pointer;
 }
 
-.salvus-3d-container:hover {
-    background : #f0f0ff;
+.salvus-3d-canvas {
+}
 
+.salvus-3d-note {
+    border        : 1px solid #aaa;
+    padding       : 3px;
+    border-radius : 2px;
+    background    : #fafafa;
+    box-shadow: 1px 1px 2px;
 }
