--- a/salvus/page/3d.css
+++ b/salvus/page/3d.css
@@ -13,3 +13,16 @@
     background    : #fafafa;
     box-shadow: 1px 1px 2px;
 }
+
+.salvus-3d-dynamic-renderer {
+    border         : 2px solid #08c;
+    border-radius  : 3px;
+    /*box-shadow     : 3px 3px 6px #aaa;*/
+}
+
+.salvus-3d-static-renderer {
+    border         : 2px solid lightgrey;
+    border-radius  : 3px;
+    display        : inline-block;
+    vertical-align : baseline;
+}
