--- a/salvus/page/index.css
+++ b/salvus/page/index.css
@@ -204,3 +204,20 @@ input[type="text"], select {
 .MathJax_SVG_Display {
     background: white;
 }
+
+
+/* From http://stackoverflow.com/questions/13955163/imitating-a-blink-tag-with-css3-animations */
+
+.blink {
+  animation: blink 1s steps(5, start) infinite;
+  -webkit-animation: blink 1s steps(5, start) infinite;
+}
+@keyframes blink {
+  to { visibility: hidden; }
+}
+@-webkit-keyframes blink {
+  to { visibility: hidden; }
+}
+
+
+
