sagews: fix bug that you can create cells in worksheet when in read-only mode

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -312,7 +312,7 @@ Editor for files in a project
     width: 100%;
 }
 
-.sagews-input:hover {
+.sagews-input-live:hover {
     cursor: pointer;
     background-color: #428bca;
 }
