--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -553,16 +553,22 @@ code {
     background : #ddd;
 }
 
-
 .salvus-editor-resize-bar-layout-2 {
     cursor     : ew-resize;
     background : #efefef;
     width      : 6px;
-    position   : absolute;
 }
 
 .salvus-editor-resize-bar-layout-2:hover {
     background : #ddd;
 }
 
+.salvus-editor-latex-resize-bar {
+    cursor     : ew-resize;
+    background : #efefef;
+    width      : 6px;
+}
 
+.salvus-editor-latex-resize-bar:hover {
+    background : #ddd;
+}
