fix UI issue involving space between tab and editor that Andy pointed out.

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -437,6 +437,8 @@ Editor for files in a project
 
 .salvus-ipython-notebook {
     background: white;
+    position: fixed;
+    width: 100%;
 }
 
 .salvus-ipython-notebook-buttons {
