--- a/salvus/page/project.css
+++ b/salvus/page/project.css
@@ -303,8 +303,7 @@
 .project-command-line {
     clear: both;
     margin-left:0em;
-    padding-left: 1em;
-    padding-right: 1em;
+    padding: 0px;
     margin-top: -1.5em;
 }
 
@@ -318,6 +317,8 @@
     width:100%;
     z-index: 1;
     margin-left:0px;
+    position: absolute;
+    box-shadow: 3px 3px 2px #aaa;
 }
 
 .project-activity-chat {
@@ -330,8 +331,8 @@
     background-color:#fff;
     color:#333;
     font-size:12px;
-    max-height:20em;
-    max-width:100%;
+    /*max-height:20em;*/
+    width:100%;
     overflow-y:auto;
 }
 .project-command-line-stderr {
@@ -340,8 +341,8 @@
     background-color:#fcc;
     color:#922;
     font-size:12px;
-    max-height:20em;
-    max-width:100%;
+    /*max-height:20em;*/
+    width:100%;
     overflow-y:auto;
 }
 
