--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -2,12 +2,17 @@
     background : white;
 }
 
+.salvus-course-student:hover {
+    background-color:#efe;
+}
+
 .salvus-course-editor {
     overflow-y    : auto;
     overflow-x    : hidden;
     margin-bottom : 2em;
     background    : white;
     width         : 100%;
+    border-top    : 1px solid #aaa;
 }
 
 .salvus-course-editor-title {
