--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -47,7 +47,6 @@
 
 .salvus-course-field {
     color:#555;
-    overflow-y: auto;
     padding-bottom: 1ex;
 }
 
@@ -84,3 +83,10 @@
     padding-bottom: 4px;
 }
 
+.salvus-course-assign-to-student {
+    cursor: default;
+}
+
+.salvus-course-collected-assignment-students {
+    cursor: default;    
+}
