landing: add some icons

--- a/salvus/page/account.css
+++ b/salvus/page/account.css
@@ -44,3 +44,11 @@
 #link-terms {
     top: 0;
 }
+
+
+.salvus-landing-icon {
+    font-size: 16pt;
+    width: 1.5em;
+    margin-top: 7px;
+    color: #002E9F;
+}
