--- a/salvus/page/project.css
+++ b/salvus/page/project.css
@@ -318,7 +318,7 @@
     z-index: 1;
     margin-left:0px;
     position: absolute;
-    box-shadow: 3px 3px 2px #aaa;
+    box-shadow: 0px 0px 7px #aaa;
 }
 
 .project-activity-chat {
@@ -334,6 +334,8 @@
     /*max-height:20em;*/
     width:100%;
     overflow-y:auto;
+    min-height:3em;
+    padding-right: 1.5em;
 }
 .project-command-line-stderr {
     margin:0;
@@ -344,6 +346,8 @@
     /*max-height:20em;*/
     width:100%;
     overflow-y:auto;
+    min-height:3em;
+    padding-right: 1.5em;
 }
 
 .project-id {
