foo?? [enter] in the notebook now shoes source code properly syntax highlighted.

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -394,6 +394,12 @@ Editor for files in a project
     color:red;
 }
 
+.sagews-output-code {
+    white-space: pre;
+    border: 2px solid lightblue;
+    padding: 1ex;
+}
+
 .sagews-output-tex {
     background: white;  /* so that tex is visible */
 }
