--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -32,9 +32,10 @@
 }
 
 .salvus-task-desc {
-    border : 1px solid transparent;
-    padding-left: 1ex;
-    padding-right: 1ex;
+    border     : 1px solid #ddd;
+    padding    : 1ex;
+    margin     : 1ex;
+    background : white;
 }
 
 .salvus-task-desc:hover {
