task: more css tweaking.

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -17,7 +17,6 @@
     border: 2px solid transparent;
     border-radius: 1ex;
     width: 99%;
-    margin-top: 3px;
     margin-left: 0px;
     margin-right: 0px;
 }
@@ -34,7 +33,9 @@
 .salvus-task-desc {
     border     : 1px solid #ddd;
     padding    : 1ex;
+    padding-bottom: 0px;
     margin     : 1ex;
+    margin-top: 0px;
     background : white;
 }
 
