comment out some stupid CSS in the media wiki codemirror css

--- a/salvus/static/codemirror-extra/mode/mediawiki/mediawiki.css
+++ b/salvus/static/codemirror-extra/mode/mediawiki/mediawiki.css
@@ -1,3 +1,5 @@
+/* WTF: What kind of evil BS is this?! -- commented out.
+
 .CodeMirror {
 	border: 1px solid #CCC;
 	font-size: medium;
@@ -7,6 +9,7 @@
 .CodeMirrorIE {
 	font-size: small;
 }
+*/
 
 .cm-mw-pagename { text-decoration: underline; }
 
