make chat a tiny bit more pleasant to look at (just a band aide)

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -239,7 +239,7 @@ Editor for files in a project
     position: fixed;
     background-color: white;
     right: 0px;
-    width: 35ex;
+    width: 42ex;
     padding: 0;
 }
 
@@ -263,7 +263,7 @@ Editor for files in a project
 }
 
 .salvus-editor-codemirror-chat-output {
-    padding:1ex;
+    padding:2ex;
     margin:0ex;
     width:100%;
     position: absolute;
@@ -274,9 +274,9 @@ Editor for files in a project
 }
 
 .salvus-editor-codemirror-chat-input {
-    padding:2%;
-    margin:0px;
-    height:5em !important;
+    padding:23x;
+    margin:0ex;
+    height:8em !important;
     width:100%;
     position : absolute;
     resize: none;
